@@ -138,7 +138,7 @@ public interface FeatureDataset extends FileCacheable {
    * The data Variables available in this dataset.
    * Should just be data variables others might be searching for, not metadata or coordinate
    * system variables, etc.
-   * The shape of this VariableSimpleIF does not necessarily match the StructureData member.
+   * The shapes of the VariableSimpleIF do not necessarily match the StructureData member.
    *
    * @return List of subclass of VariableSimpleIF, may be empty but not null
    */
